fix alignment of videos

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -66,7 +66,6 @@ h6:hover .heading-permalink,
 .embedded-content {
     display: flex;
     margin-top: 2rem;
-    justify-content: center;
 }
 
 /* Ascii */
